fix(speech): finally fixing the audio pipeline
